Constraintprog/minizinc-1.6/tests/flattening/test-mzn2fzn/misc_array_2d.mzn
array [1..2, 1..2] of var 1..4: x1;
constraint x1 = [|1, 2|3, 4|];
solve satisfy;
